2001-08-24  Anders Carlsson  <andersca@codefactory.se>

	* gnome-entry.c: (gnome_entry_get_type), (gnome_entry_class_init),
	(gnome_entry_get_property), (gnome_entry_set_property),
	(entry_changed), (entry_activated), (gnome_entry_init),
	(gnome_entry_construct), (gnome_entry_new), (free_item),
	(free_items), (gnome_entry_destroy), (gnome_entry_finalize),
	(gnome_entry_gtk_entry), (gnome_entry_set_history_id),
	(gnome_entry_get_history_id), (gnome_entry_set_max_saved),
	(gnome_entry_get_max_saved), (build_prefix),
	(gnome_entry_add_history), (gnome_entry_prepend_history),
	(gnome_entry_append_history), (set_combo_items),
	(gnome_entry_load_history), (gnome_entry_clear_history),
	(check_for_duplicates), (gnome_entry_save_history):
	* gnome-entry.h:

	Bring back the old GnomeEntry widget.
	
Fri Aug 24 07:57:50 2001  George Lebl <jirka@5z.com>

	* gnome-color-picker.c, gnome-font-picker.c: use gnome-macros.h

Fri Aug 24 07:16:18 2001  George Lebl <jirka@5z.com>

	* gnome-font-picker.[ch]: move all fields to the private struct,
	  add an accessor for the 'inside', but only if it's a user set
	  inside.  Change gtkargs to gparams so we get all the new stuff.
	  Add a fixme here and there and minor doc updates

2001-08-22  Iain Holmes  <iain@ximian.com>

	* Makefile.am: Install gnome-macros.h

2001-08-14  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Disabled GnomeFontPicker.

2001-08-14  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Disabled GnomeAbout, don't link it into the
	library and don't install the header file.

	* gnome-about.h (GnomeAbout): Removed all fields and added
	a private field.
	(gnome_about_new): Removed.

Sun Aug 12 11:22:03 2001  George Lebl <jirka@5z.com>

	* gnome-dateedit.[ch]: Some cleanup, and make the time
	  reading/writing code be i18n correct (to a degree at least),
	  also fix possible bad strftime use.

	* gnome-entry.c: no comma after last enum element and unref
	  the property bag in finalize
